# marketing_op/api/design/openapi.yaml
@@ -4,10 +4,34 @@ info:
   version: 1.0.0
   description: "API for fetching marketing data measurements and insights."
 paths:
+  /api/auth/token/:
+    get:
+      operationId: api_marketing_op_api_get_token
+      summary: Get Token
+      description: Retrieves the token necessary to authenticate the rest of the endpoints of the API.
+      security:
+        - BasicAuth: []
+      responses:
+        '200':
+          description: OK
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  data:
+                    properties:
+                      token:
+                        type: string
+                        example: "eyJhbGciOi"
+        '401':
+          description: Unauthorized
   /api/marketing-measurements/:
     get:
       operationId: marketing-measurements
       summary: Get Marketing Measurements
+      security:
+        - AuthBearer: []
       parameters:
       - in: query
         name: products
@@ -118,6 +142,8 @@ paths:
     get:
       operationId: api_marketing_op_api_channel_sales_percentages
       summary: Channel Sales Percentages
+      security:
+        - AuthBearer: []
       parameters:
         - in: query
           name: products
@@ -219,104 +245,106 @@ paths:
           description: Bad Request
         '401':
           description: Unauthorized
-    /api/marketing/stats/channel-weekly-sales/:
-      get:
-        operationId: api_marketing_op_api_channel_weekly_sales
-        summary: Channel Weekly Sales
-        parameters:
-          - in: query
-            name: products
-            schema:
-              type: array
-              items:
-                type: string
-            required: false
-          - in: query
-            name: campaigns
-            schema:
-              type: array
-              items:
-               type: string
-            required: false
-          - in: query
-            name: campaign_types
-            schema:
-              type: array
-              items:
-               type: string
-               enum:
-                 - always on
-                 - branding
-                 - performance
-            required: false
-          - in: query
-            name: channels
-            schema:
-              type: array
-              items:
-               type: string
-               enum:
-                 - tv
-                 - radio
-                 - ooh
-                 - facebook
-                 - print
-                 - tiktok
-                 - instagram
-                 - db360 - prospecting
-                 - db360 - retargeting
-                 - google - branded search
-                 - google - non-branded search
-                 - dv360 - prospecting
-                 - dv360 - retargeting
-                 - folder
-            required: false
-          - in: query
-            name: start_date
-            schema:
+  /api/marketing/stats/channel-weekly-sales/:
+    get:
+      operationId: api_marketing_op_api_channel_weekly_sales
+      summary: Channel Weekly Sales
+      security:
+        - AuthBearer: []
+      parameters:
+        - in: query
+          name: products
+          schema:
+            type: array
+            items:
               type: string
-              format: date
-            required: false
-          - in: query
-            name: end_date
-            schema:
-              type: string
-              format: date
-            required: false
-          - in: query
-            name: offset
-            schema:
-              default: 0
-              minimum: 0
-              type: integer
-            required: false
-          - in: query
-            name: page_size
-            schema:
-              default: 10
-              exclusiveMinimum: 0
-              maximum: 100
-              type: integer
-            required: false
-        responses:
-          '200':
-            description: OK
-            content:
-              application/json:
-                schema:
-                  properties:
-                    data:
-                      items:
-                        $ref: "#/components/schemas/ChannelWeeklySalesSchema"
-                      title: Data
-                      type: array
-                      total: 1
-                  required:
-                    - data
-                examples:
-                  ChannelWeeklySales:
-                    summary: Channel Weekly Sales
-                    value:
+          required: false
+        - in: query
+          name: campaigns
+          schema:
+            type: array
+            items:
+             type: string
+          required: false
+        - in: query
+          name: campaign_types
+          schema:
+            type: array
+            items:
+             type: string
+             enum:
+               - always on
+               - branding
+               - performance
+          required: false
+        - in: query
+          name: channels
+          schema:
+            type: array
+            items:
+             type: string
+             enum:
+               - tv
+               - radio
+               - ooh
+               - facebook
+               - print
+               - tiktok
+               - instagram
+               - db360 - prospecting
+               - db360 - retargeting
+               - google - branded search
+               - google - non-branded search
+               - dv360 - prospecting
+               - dv360 - retargeting
+               - folder
+          required: false
+        - in: query
+          name: start_date
+          schema:
+            type: string
+            format: date
+          required: false
+        - in: query
+          name: end_date
+          schema:
+            type: string
+            format: date
+          required: false
+        - in: query
+          name: offset
+          schema:
+            default: 0
+            minimum: 0
+            type: integer
+          required: false
+        - in: query
+          name: page_size
+          schema:
+            default: 10
+            exclusiveMinimum: 0
+            maximum: 100
+            type: integer
+          required: false
+      responses:
+        '200':
+          description: OK
+          content:
+            application/json:
+              schema:
+                properties:
+                  data:
+                    items:
+                      $ref: "#/components/schemas/ChannelWeeklySalesSchema"
+                    title: Data
+                    type: array
+                    total: 1
+                required:
+                  - data
+              examples:
+                ChannelWeeklySales:
+                  summary: Channel Weekly Sales
+                  value:
                     data:
                       - channel: "tv"
                         year: 2024
@@ -426,5 +454,11 @@ components:
         - week
         - sales
       type: object
-
+  securitySchemes:
+    AuthBearer:
+      type: http
+      scheme: bearer
+    BasicAuth:
+      type: http
+      scheme: basic
 servers: []
