# marketing_op/api/marketing_op_api.py
@@ -1,7 +1,7 @@
 from django.http import HttpRequest
 from ninja import NinjaAPI, Router, Query
 from ninja.pagination import paginate
-
+from api.security import BasicAuth, AuthBearer
 from api.pagination import MarketingDataPagination
 from api.schemas import (
     MarketingDataSchema,
@@ -9,6 +9,7 @@ from api.schemas import (
     ChannelSalesPercentageSchema,
     ChannelWeeklySalesSchema,
 )
+from api.services.auth import generate_token
 from api.services.marketing_measurements import get_marketing_data
 from api.services.marketing_stats import (
     get_channel_sales_percentages,
@@ -23,6 +24,7 @@ router = Router()
 @router.get(
     "/measurements/",
     response={200: list[MarketingDataSchema]},
+    auth=AuthBearer(),
 )
 @paginate(MarketingDataPagination)
 def marketing_measurements(
@@ -35,6 +37,7 @@ def marketing_measurements(
 @router.get(
     "/stats/channel-sales-percentages/",
     response={200: list[ChannelSalesPercentageSchema]},
+    auth=AuthBearer(),
 )
 @paginate(MarketingDataPagination)
 def channel_sales_percentages(
@@ -47,6 +50,7 @@ def channel_sales_percentages(
 @router.get(
     "/stats/channel-weekly-sales/",
     response={200: list[ChannelWeeklySalesSchema]},
+    auth=AuthBearer(),
 )
 @paginate(MarketingDataPagination)
 def channel_weekly_sales(
@@ -56,4 +60,20 @@ def channel_weekly_sales(
     return data
 
 
+auth_router = Router()
+
+
+@auth_router.get(
+    "/token/",
+    response={200: dict},
+    auth=BasicAuth(),
+)
+def get_token(request: HttpRequest):
+    user, password = BasicAuth().decode_authorization(request.headers["Authorization"])
+    token = generate_token(user)
+
+    return {"data": {"token": token}}
+
+
 api.add_router("/marketing", router)
+api.add_router("/auth", auth_router)
